backup_individuals/sjeng/use_undefined_identifier/c2/losers_eval
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:750:11: error: use of undeclared identifier 'xmmword_41B640'
v163[0] = xmmword_41B640; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:751:11: error: use of undeclared identifier 'xmmword_41B650'
v160[0] = xmmword_41B650; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:752:11: error: use of undeclared identifier 'xmmword_41B640'
v163[1] = xmmword_41B640; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:753:11: error: use of undeclared identifier 'xmmword_41B650'
v160[1] = xmmword_41B650; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:1000:5: error: use of undeclared identifier 'dword_66759C'
+ ( dword_66759C[v14] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:1011:5: error: use of undeclared identifier 'dword_66759C'
+ ( dword_66759C[v14] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:1030:8: error: use of undeclared identifier 'dword_66759C'
v88 = &dword_66759C[v14]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:1073:8: error: use of undeclared identifier 'dword_66759C'
v78 = &dword_66759C[v14]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:1173:9: error: use of undeclared identifier 'dword_66759C'
v118 = &dword_66759C[v14]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/leval.c:1279:8: error: use of undeclared identifier 'dword_66759C'
v47 = &dword_66759C[v14]; 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/losers_eval/src/obj/leval.o] Error 1
